--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/bcgov/bc-emli-pin-mgmt-be#readme",
   "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.1",
-    "express": "^4.18.2",
     "typescript": "^5.1.6"
   }
 }
