--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "BC Virtual Home Energy Rating PIN Management System Backend",
   "main": "index.ts",
   "scripts": {
-    "build": "npx tsc",
-    "start": "nodemon --watch \"src/**\" --ext \"ts,tsx,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
+    "build": "tsoa spec-and-routes && tsc",
+	"dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "start": "node dist/index.js"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -32,15 +33,28 @@
   },
   "homepage": "https://github.com/bcgov/bc-emli-pin-mgmt-be#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/morgan": "^1.9.4", 
+    "axios": "^1.4.0", 
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "crypto-random-string": "^5.0.0", 
+    "dotenv": "^16.3.1", 
+    "express": "^4.18.2", 
+    "express-rate-limit": "^6.7.1", 
+    "morgan": "^1.10.0", 
+    "swagger-ui-express": "^5.0.0", 
+    "tsoa": "^5.1.1", 
+    "winston": "^3.10.0" 
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.1",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
