--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsoa spec-and-routes && tsc",
-	"dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
     "prepare": "husky install",
     "test": "jest",
     "start": "node dist/index.js"
@@ -33,18 +33,21 @@
   },
   "homepage": "https://github.com/bcgov/bc-emli-pin-mgmt-be#readme",
   "dependencies": {
-    "@types/morgan": "^1.9.4", 
-    "axios": "^1.4.0", 
+    "@types/morgan": "^1.9.4",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "crypto-random-string": "^5.0.0", 
-    "dotenv": "^16.3.1", 
-    "express": "^4.18.2", 
-    "express-rate-limit": "^6.7.1", 
-    "morgan": "^1.10.0", 
-    "swagger-ui-express": "^5.0.0", 
-    "tsoa": "^5.1.1", 
-    "winston": "^3.10.0" 
+    "crypto-random-string": "^5.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.1",
+    "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^5.0.0",
+    "tsoa": "^5.1.1",
+    "typeorm": "^0.3.17",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
