adding in environment

--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Login to Openshift
         shell: bash
         run: |
-          oc login --server=${{ secrets.OPENSHIFT_LOGIN_REGISTRY }} --token=${{ secrets.OPENSHIFT_SA_TOKEN }}
+          oc login --server=${{ secrets.OPENSHIFT_LOGIN_REGISTRY }} --token=${{ secrets.OPENSHIFT_SA_TOKEN_DEV }}
 
       # Switch namespace to environment variable ${{ vars.OPENSHIFT_NAMESPACE }}
       - name: Switch to correct project environment in Openshift
