--- a/build-config.yaml
+++ b/build-config.yaml
@@ -9,6 +9,7 @@ spec:
     type: Git
     git:
       uri: https://github.com/bcgov/bc-emli-pin-mgmt-be
+      ref: "dev"
     contextDir:
   strategy:
     type: Docker
