--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "bc-emli-pin-mgmt-be",
   "version": "1.0.0",
   "description": "BC Virtual Home Energy Rating PIN Management System Backend",
-  "main": "index.ts",
+  "exports": [
+    "./index.ts"
+  ],
   "scripts": {
     "build": "tsoa spec-and-routes && tsc",
     "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
@@ -37,7 +39,7 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "crypto-random-string": "^5.0.0",
+    "crypto-random-string": "3.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
