--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,6 @@ TYPEORM_USERNAME = 'username'
 TYPEORM_PASSWORD = 'password'
 TYPEORM_DATABASE = 'dbname'
 TYPEORM_PORT = 5432
-TYPEORM_SYNCHRONIZE = false
+TYPEORM_SYNCHRONIZE = false # should be true in dev, false in production
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = entity/*.js,modules/**/entity/*.js
