--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,9 @@
 # Copy this file and include your actual environment variables
-# TYPEORM variables 
-TYPEORM_CONNECTION = 'postgres'
-TYPEORM_HOST = 'localhost'
-TYPEORM_USERNAME = 'username'
-TYPEORM_PASSWORD = 'password'
-TYPEORM_DATABASE = 'dbname'
-TYPEORM_PORT = 5432
+# TYPEORM / DB variables 
+DB_HOST = 'localhost'
+DB_USERNAME = 'username'
+DB_PASSWORD = 'password'
+DB_NAME = 'dbname'
+DB_PORT = 5432
 TYPEORM_SYNCHRONIZE = false # should be true in dev, false in production
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = entity/*.js,modules/**/entity/*.js
