--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
             "block": {
                 "exceptions": ["+", "-", "*"]
             }
-        }]
+        }],
+		"@typescript-eslint/no-explicit-any": "off"
     }
 }
