Created geocode API caller, relevant types and tests. Added varibles for geocoder api to .env template

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,7 @@ DB_NAME = 'dbname'
 DB_PORT = 5432
 TYPEORM_SYNCHRONIZE = false # should be true in dev, false in production
 TYPEORM_LOGGING = true
+
+# API URL variables
+GEOCODER_API_BASE_URL='https://geocoder.api.gov.bc.ca/'
+GEOCODER_API_ADDRESSES_ENDPOINT='addresses.json'
