Changed endpoint name to /address Added timezone to logger Moved env variables to secrets (changed .env.template to .env.local)

--- a/.env.local
+++ b/.env.local
@@ -4,10 +4,10 @@ DB_HOST = 'localhost'
 DB_USERNAME = 'username'
 DB_PASSWORD = 'password'
 DB_NAME = 'dbname'
-DB_PORT = 5432
+DB_PORT = your port number here
 TYPEORM_SYNCHRONIZE = false # should be true in dev, false in production
 TYPEORM_LOGGING = true
 
 # API URL variables
-GEOCODER_API_BASE_URL='https://geocoder.api.gov.bc.ca/'
-GEOCODER_API_ADDRESSES_ENDPOINT='addresses.json'
+GEOCODER_API_BASE_URL= 'testurl'
+GEOCODER_API_ADDRESSES_ENDPOINT='endpoint_name.json'
