Adding in commnets to route

--- a/.env.template
+++ b/.env.template
@@ -8,4 +8,4 @@ DB_PORT = 5432
 TYPEORM_SYNCHRONIZE = false # should be true in dev, false in production
 TYPEORM_LOGGING = true
 BCGEOCODER_API_KEY_PID = 'apikey'
-BCGEOCODER_TEST_API_URL = 'https://geocodertst.api.gov.bc.ca/parcels/pids/'
+BCGEOCODER_TEST_API_URL_PID = 'https://geocodertst.api.gov.bc.ca/parcels/pids/'
