--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
     "prepare": "husky install",
     "test": "jest",
-    "start": "node dist/index.js",
+    "start": "nodemon dist/index.js",
     "db:migrate": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
     "db:migrate:down": "typeorm-ts-node-commonjs migration:revert -d ./src/data-source.ts",
     "db:migrate:test": "NODE_ENV=test typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
