--- a/.env.local
+++ b/.env.local
@@ -12,4 +12,4 @@ TYPEORM_LOGGING = true
 GEOCODER_API_BASE_URL= 'testurl'
 GEOCODER_API_ADDRESSES_ENDPOINT='endpoint_name.json'
 BCGEOCODER_API_KEY_PID = 'apikey'
-BCGEOCODER_TEST_API_URL_PID = 'pid testurl'
+GEOCODER_API_PARCELS_ENDPOINT='parcels/pids/'
