--- a/package.json
+++ b/package.json
@@ -40,16 +40,25 @@
   },
   "homepage": "https://github.com/bcgov/bc-emli-pin-mgmt-be#readme",
   "dependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express-session": "^1.17.0",
     "@types/morgan": "^1.9.4",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "crypto-random-string": "3.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
+    "memorystore": "^1.6.7",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
+    "qs": "^6.11.2",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^5.1.1",
