--- a/.env.local
+++ b/.env.local
@@ -13,3 +13,4 @@ GEOCODER_API_BASE_URL= 'testurl'
 GEOCODER_API_ADDRESSES_ENDPOINT='endpoint_name.json'
 BCGEOCODER_API_KEY_PID = 'apikey'
 GEOCODER_API_PARCELS_ENDPOINT='parcels/pids/'
+FE_APP_URL='front-end-app-url'
