--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "crypto-random-string": "3.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -57,6 +58,7 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.1",
