--- a/.env.local
+++ b/.env.local
@@ -21,8 +21,8 @@ CSS_DOMAIN_NAME_URL=url_here
 OIDC_GRANT_TYPE=authorization_code
 OIDC_RESPONSE_TYPE=code
 OIDC_SCOPE=email+openid
-OIDC_REDIRECT_URL=http://localhost:3000/oauth
-OIDC_LOGOUT_REDIRECT_URL=http://localhost:3000/oauth/logout
+OIDC_REDIRECT_URL=end-point/oauth
+OIDC_LOGOUT_REDIRECT_URL=end-point/oauth/logout
 
 COOKIE_SESSION_NAME=nodejs-oauth
 COOKIE_SESSION_SECRET=random user generated secret
