--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install",
     "test": "jest",
     "start": "node dist/index.js",
+	"migration:create": "npm run build && typeorm migration:create ./src/migration",
     "db:migrate": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
     "db:migrate:down": "typeorm-ts-node-commonjs migration:revert -d ./src/data-source.ts",
     "db:migrate:test": "NODE_ENV=test typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
