Adding npm run build to github actions pipeline files

--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Run tests
         run: npm test
+      
+      - name: Build
+        run: npm run build
 
     ####### Need to set up prod namespace on openshift
 
