Added gcnotify text and email functionality.

--- a/.env.local
+++ b/.env.local
@@ -30,3 +30,7 @@ JWT_SECRET=secret here
 BCGEOCODER_API_KEY_PID = 'apikey'
 GEOCODER_API_PARCELS_ENDPOINT='parcels/pids/'
 FE_APP_URL='front-end-app-url'
+
+GC_NOTIFY_API_KEY='apikey'
+GC_NOTIFY_URL='url'
+GC_NOTIFY_RETRY_LIMIT=3
