--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/express-session": "^1.17.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.4",
     "@types/string_score": "^0.1.28",
     "axios": "^1.4.0",
@@ -57,7 +58,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "notifications-node-client": "^7.0.3",
     "pg": "^8.11.1",
