Adding in GCNotify functionality for regenerate pin api

--- a/.env.local
+++ b/.env.local
@@ -34,3 +34,5 @@ FE_APP_URL='front-end-app-url'
 GC_NOTIFY_API_KEY='apikey'
 GC_NOTIFY_URL='url'
 GC_NOTIFY_RETRY_LIMIT=3
+GC_NOTIFY_REGENERATE_EMAIL_TEMPLATE_ID='regenerate-email-template-id'
+GC_NOTIFY_REGENERATE_PHONE_TEMPLATE_ID='regenerate-phone-template-id'
