--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -37,17 +37,17 @@ jobs:
 
       ####### Need to set up test namespace on openshift
 
-      # - name: Login to Openshift
-      #   shell: bash
-      #   run: |
-      #     oc login --server=${{ secrets.OPENSHIFT_LOGIN_REGISTRY }} --token=${{ secrets.OPENSHIFT_SA_TOKEN_TEST }}
+      - name: Login to Openshift
+        shell: bash
+        run: |
+          oc login --server=${{ secrets.OPENSHIFT_LOGIN_REGISTRY }} --token=${{ secrets.OPENSHIFT_SA_TOKEN_TEST }}
 
-      # - name: Switch to correct project environment in Openshift
-      #   shell: bash
-      #   run: |
-      #     oc project ${{ secrets.OPENSHIFT_NAMESPACE_TEST }}
+      - name: Switch to correct project environment in Openshift
+        shell: bash
+        run: |
+           oc project ${{ secrets.OPENSHIFT_NAMESPACE_TEST }}
 
-      # - name: Build image on OpenShift
-      #   shell: bash
-      #   run: |
-      #     oc start-build ${{ secrets.OPENSHIFT_BUILDCONFIG }}
+      - name: Build image on OpenShift
+        shell: bash
+        run: |
+          oc start-build ${{ secrets.OPENSHIFT_BUILDCONFIG }}
