--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ DB_HOST = 'localhost'
 DB_USERNAME = 'username'
 DB_PASSWORD = 'password'
 DB_NAME = 'dbname'
-DB_PORT = your port number here
+DB_PORT = 'your port number here'
 TYPEORM_SYNCHRONIZE = false # should be true in dev, false in production
 TYPEORM_LOGGING = true
 
