--- a/.env.local
+++ b/.env.local
@@ -38,5 +38,7 @@ GC_NOTIFY_REGENERATE_EMAIL_TEMPLATE_ID='regenerate-email-template-id'
 GC_NOTIFY_REGENERATE_PHONE_TEMPLATE_ID='regenerate-phone-template-id'
 GC_NOTIFY_CREATE_EMAIL_TEMPLATE_ID='create-email-template-id'
 GC_NOTIFY_CREATE_PHONE_TEMPLATE_ID='create-phone-template-id'
+GC_NOTIFY_EXPIRE_EMAIL_TEMPLATE_ID='expire-email-template-id'
+GC_NOTIFY_EXPIRE_PHONE_TEMPLATE_ID='expire-phone-template-id'
 
 VHERS_API_KEY=''
