--- a/.env.local
+++ b/.env.local
@@ -42,5 +42,7 @@ GC_NOTIFY_EXPIRE_EMAIL_TEMPLATE_ID='expire-email-template-id'
 GC_NOTIFY_EXPIRE_PHONE_TEMPLATE_ID='expire-phone-template-id'
 GC_NOTIFY_VHERS_ADMIN_EMAIL='hers_admin@gov.bc.ca'
 GC_NOTIFY_ACCESS_REQUEST_EMAIL_TEMPLATE_ID='access-request-email-template-id'
+GC_NOTIFY_ACCESS_REJECT_EMAIL_TEMPLATE_ID='access-reject-email-template-id'
+GC_NOTIFY_ACCESS_APPROVE_EMAIL_TEMPLATE_ID='access-approve-email-template-id'
 
 VHERS_API_KEY=''
