--- a/.env.local
+++ b/.env.local
@@ -45,5 +45,6 @@ GC_NOTIFY_ACCESS_REQUEST_EMAIL_TEMPLATE_ID='access-request-email-template-id'
 GC_NOTIFY_ACCESS_REJECT_EMAIL_TEMPLATE_ID='access-reject-email-template-id'
 GC_NOTIFY_ACCESS_APPROVE_EMAIL_TEMPLATE_ID='access-approve-email-template-id'
 GC_NOTIFY_USER_DEACTIVATION_EMAIL_TEMPLATE_ID='user-deactivation-email-template-id'
+GC_NOTIFY_UPDATE_USER_EMAIL_TEMPLATE_ID='update-user-email-template-id'
 
 VHERS_API_KEY=''
