--- a/.env.local
+++ b/.env.local
@@ -30,6 +30,9 @@ JWT_SECRET=secret here
 BCGEOCODER_API_KEY_PID = 'apikey'
 GEOCODER_API_PARCELS_ENDPOINT='parcels/pids/'
 FE_APP_URL='front-end-app-url'
+BE_APP_URL='back-end-app-url'
+PROPERATE_STAGING_URL='properate-stage-url'
+PROPERATE_TEST_URL='properate-test-url'
 
 GC_NOTIFY_API_KEY='apikey'
 GC_NOTIFY_URL='url'
