updating target url

--- a/.github/workflows/npm-test-only-pipeline.yml
+++ b/.github/workflows/npm-test-only-pipeline.yml
@@ -44,7 +44,7 @@ jobs:
     uses: bcgov/pipeline-templates/.github/workflows/owasp-scan.yaml@main
     with:
       ZAP_SCAN_TYPE: 'base' # Accepted values are base and full.
-      ZAP_TARGET_URL: http://www.itsecgames.com
+      ZAP_TARGET_URL: https://bc-emli-pin-mgmt-be-c82b4c-dev.apps.silver.devops.gov.bc.ca/
       ZAP_DURATION: '2'
       ZAP_MAX_DURATION: '5'
       ZAP_GCP_PUBLISH: false
