Adding zap scan to dev, prod, and test workflows

--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - "dev" # Switch this to environment variable ${{ vars.environemnt }}
+  workflow_dispatch:
 
 jobs:
   codeql-scan:
@@ -35,6 +36,15 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+
+  zap-owasp:
+    uses: bcgov/pipeline-templates/.github/workflows/owasp-scan.yaml@main
+    with:
+      ZAP_SCAN_TYPE: 'base' # Accepted values are base and full.
+      ZAP_TARGET_URL: https://bc-emli-pin-mgmt-be-c82b4c-dev.apps.silver.devops.gov.bc.ca/
+      ZAP_DURATION: '2'
+      ZAP_MAX_DURATION: '5'
+      ZAP_GCP_PUBLISH: false
 
   build:
     runs-on: ubuntu-latest
