Added /dashboard endpoint to fetch metabase dashboard url and relevant tests

--- a/.env.local
+++ b/.env.local
@@ -51,3 +51,7 @@ GC_NOTIFY_USER_DEACTIVATION_EMAIL_TEMPLATE_ID='user-deactivation-email-template-
 GC_NOTIFY_UPDATE_USER_EMAIL_TEMPLATE_ID='update-user-email-template-id'
 
 VHERS_API_KEY=''
+
+METABASE_SITE_URL='url'
+METABASE_SECRET_KEY='key here'
+METABASE_EXPIRY_MINUTES=30
