Added option to scale maximum db pool to help with addtional load. Added more load tests. Fixed unit tests

--- a/.env.local
+++ b/.env.local
@@ -5,6 +5,7 @@ DB_USERNAME = 'username'
 DB_PASSWORD = 'password'
 DB_NAME = 'dbname'
 DB_PORT = 'your port number here'
+POOL_SIZE = 'number of connections in db pool here'
 TYPEORM_SYNCHRONIZE = false # should be true in dev, false in production
 TYPEORM_LOGGING = true
 
