Added properate prod URL env variable

--- a/.deployment/prod.deploy.yml
+++ b/.deployment/prod.deploy.yml
@@ -276,6 +276,11 @@ objects:
                     secretKeyRef:
                       name: bc-emli-pin-mgmt-be
                       key: PROPERATE_TEST_URL
+                - name: PROPERATE_PROD_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: bc-emli-pin-mgmt-be
+                      key: PROPERATE_PROD_URL
                 - name: GC_NOTIFY_UPDATE_USER_EMAIL_TEMPLATE_ID
                   valueFrom:
                     secretKeyRef:
