--- a/.env.local
+++ b/.env.local
@@ -33,6 +33,7 @@ FE_APP_URL='front-end-app-url'
 BE_APP_URL='back-end-app-url'
 PROPERATE_STAGING_URL='properate-stage-url'
 PROPERATE_TEST_URL='properate-test-url'
+PROPERATE_PROD_URL='properate-prod-url'
 
 GC_NOTIFY_API_KEY='apikey'
 GC_NOTIFY_URL='url'
