Update gitignore to not include load test results

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ dist
 # Log files
 logs
 coverage
-
+load-testing/results/summary/*/
+load-testing/results/detailed/*/
 # Temporary files
 tmp
 temp
