--- a/.deployment/prod.deploy.yml
+++ b/.deployment/prod.deploy.yml
@@ -123,7 +123,7 @@ objects:
                   valueFrom:
                     secretKeyRef:
                       name: bcgeocoder
-                      key: geocoder-test-api-url
+                      key: geocoder-prod-api-url
                 - name: GEOCODER_API_ADDRESSES_ENDPOINT
                   valueFrom:
                     secretKeyRef:
