--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -51,7 +51,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.20.4]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
