--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -8,8 +8,8 @@ on:
     - .github/**
     - .husky/**
     - load-testing/**
-    - *.md
-    - *.yaml
+    - "*.md"
+    - "*.yaml"
     - /.*
   workflow_dispatch:
 
