--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -2,6 +2,13 @@ name: Run ZAP Full Scan
 
 on:
   workflow_dispatch:
+    inputs:
+      url:
+        type: choice
+        description: The Target URL
+        options:
+            - https://bc-emli-pin-mgmt-be-c82b4c-dev.apps.silver.devops.gov.bc.ca/
+            - https://bc-emli-pin-mgmt-fe-c82b4c-dev.apps.silver.devops.gov.bc.ca/home
 
 jobs:
   zap-scan:
@@ -10,7 +17,7 @@ jobs:
     permissions:
       contents: read
       issues: write
-
+    
     steps:
     - uses: hmarr/debug-action@v3
     - uses: actions/checkout@v4
