ci: oc no longer installed in runner
added a line to install the Openshift CLI as it looks like the default runner no longer has it.

--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -81,7 +81,12 @@ jobs:
       
       - name: Build
         run: npm run build
-
+    
+      - name: Install OpenShift CLI
+        uses: redhat-actions/oc-installer@v1
+        with:
+          oc_version: 'latest' 
+      
       - name: Login to Openshift
         shell: bash
         run: |
